fixed annoying card-spacing issue

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4809,6 +4809,16 @@ span.badge {
       margin-left: 91.66667%; }
     .row .col.offset-s12 {
       margin-left: 100%; }
+    @media only screen and (min-width : 1230px) {
+      .row .col.m3 {
+        width: 25% !important;
+        margin-left: 0; }
+    }
+    @media only screen and (min-width : 750px) {
+      .row .col.m4 {
+        width: 33.33333% !important;
+        margin-left: 0; }
+    }
     @media only screen and (min-width : 601px) {
       .row .col.m1 {
         width: 8.33333%;
@@ -4819,11 +4829,11 @@ span.badge {
         margin-left: 0; }
 
       .row .col.m3 {
-        width: 25%;
+        width: 50%;
         margin-left: 0; }
 
       .row .col.m4 {
-        width: 33.33333%;
+        width: 50%;
         margin-left: 0; }
 
       .row .col.m5 {
